<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ModuleDetailActivity">

    <TextView
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/code" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <TextView
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year" />

    <TextView
        android:id="@+id/sem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sem" />

    <TextView
        android:id="@+id/cred"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cred" />

    <TextView
        android:id="@+id/venue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/venue" />
</LinearLayout>